# spikeLogBert

./: .gitignore  README.md  distill.py  evaluate.py  main.py  pyproject.toml  train_direct.py  train_teacher.py  utils.py
configs/: bgl.yaml  hdfs.yaml  thunderbird.yaml
data/: __init__.py  dataset.py  download.py
model/: __init__.py  spikformer.py
notebooks/: train_colab.ipynb  train_colab_hdfs_full.ipynb
train/hdfs/: run.sh
